--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 absl-py==2.1.0
 aiohttp==3.9.5
 aiosignal==1.3.1
+alembic==1.13.1
+aniso8601==9.0.1
 anyio==4.2.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -12,44 +14,57 @@ attrs==23.2.0
 Babel==2.14.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
-blinker==1.4
+blinker==1.8.2
 blobfile==2.1.1
+cachetools==5.3.3
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
+cloudpickle==3.0.0
 comm==0.2.1
-cryptography==3.4.8
-datasets==2.19.1
-dbus-python==1.2.18
+contourpy==1.2.1
+cycler==0.12.1
+datasets==2.19.2
 debugpy==1.8.0
 decorator==5.1.1
 defusedxml==0.7.1
+Deprecated==1.2.14
 dill==0.3.8
-distro==1.7.0
+docker==7.1.0
 entrypoints==0.4
 exceptiongroup==1.2.0
 executing==2.0.1
 fastjsonschema==2.19.1
 filelock==3.13.1
+Flask==3.0.3
+fonttools==4.53.0
 fqdn==1.5.1
 frozenlist==1.4.1
 fsspec==2024.2.0
-grpcio==1.64.0
+gitdb==4.0.11
+GitPython==3.1.43
+graphene==3.3
+graphql-core==3.2.3
+graphql-relay==3.2.0
+greenlet==3.0.3
+grpcio==1.64.1
+gunicorn==22.0.0
 h11==0.14.0
 httpcore==1.0.2
-httplib2==0.20.2
 httpx==0.26.0
-huggingface-hub==0.23.2
+huggingface-hub==0.23.3
 idna==3.6
-importlib-metadata==4.6.4
+importlib_metadata==7.1.0
 ipykernel==6.29.0
 ipython==8.21.0
 ipython-genutils==0.2.0
 ipywidgets==8.1.1
 isoduration==20.11.0
+itsdangerous==2.2.0
 jedi==0.19.1
-jeepney==0.7.1
 Jinja2==3.1.3
+joblib==1.4.2
 json5==0.9.14
 jsonpointer==2.4
 jsonschema==4.21.1
@@ -69,16 +84,15 @@ jupyterlab==4.1.0
 jupyterlab-widgets==3.0.9
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.25.2
-keyring==23.5.0
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
+kiwisolver==1.4.5
 lxml==4.9.4
+Mako==1.3.5
 Markdown==3.6
 MarkupSafe==2.1.5
+matplotlib==3.9.0
 matplotlib-inline==0.1.6
 mistune==3.0.2
-more-itertools==8.10.0
+mlflow==2.13.2
 mpmath==1.3.0
 multidict==6.0.5
 multiprocess==0.70.16
@@ -95,7 +109,7 @@ nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
 nvidia-cuda-nvrtc-cu12==12.1.105
 nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
+nvidia-cudnn-cu12==9.1.0.70
 nvidia-cufft-cu12==11.0.2.54
 nvidia-curand-cu12==10.3.2.106
 nvidia-cusolver-cu12==11.4.5.107
@@ -103,7 +117,9 @@ nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.20.5
 nvidia-nvjitlink-cu12==12.3.101
 nvidia-nvtx-cu12==12.1.105
-oauthlib==3.2.0
+opentelemetry-api==1.25.0
+opentelemetry-sdk==1.25.0
+opentelemetry-semantic-conventions==0.46b0
 overrides==7.7.0
 packaging==23.2
 pandas==2.2.2
@@ -112,55 +128,57 @@ parso==0.8.3
 pexpect==4.9.0
 pillow==10.2.0
 platformdirs==4.2.0
-# Editable install with no version control (plm-train==0.1)
--e /workspace/plm-train
 prometheus-client==0.19.0
 prompt-toolkit==3.0.43
-protobuf==5.27.0
+protobuf==4.25.3
 psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
-pyarrow==16.1.0
+pyarrow==15.0.2
 pyarrow-hotfix==0.6
 pycparser==2.21
 pycryptodomex==3.20.0
 Pygments==2.17.2
-PyGObject==3.42.1
-PyJWT==2.3.0
-pyparsing==2.4.7
-python-apt==2.4.0+ubuntu2
+pyparsing==3.1.2
 python-dateutil==2.8.2
 python-json-logger==2.0.7
 pytorch-triton==3.0.0+45fff310c8
 pytz==2024.1
 PyYAML==6.0.1
 pyzmq==24.0.1
+querystring-parser==1.2.4
 referencing==0.33.0
 regex==2024.5.15
-requests==2.31.0
+requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.17.1
 safetensors==0.4.3
-SecretStorage==3.3.1
+scikit-learn==1.5.0
+scipy==1.13.1
 Send2Trash==1.8.2
 sentencepiece==0.2.0
 six==1.16.0
+smmap==5.0.1
 sniffio==1.3.0
 soupsieve==2.5
+SQLAlchemy==2.0.30
+sqlparse==0.5.0
 stack-data==0.6.3
 sympy==1.12
-tensorboard==2.16.2
+tensorboard==2.17.0
 tensorboard-data-server==0.7.2
 terminado==0.18.0
+threadpoolctl==3.5.0
 tiktoken==0.7.0
 tinycss2==1.2.1
 tokenizers==0.19.1
 tomli==2.0.1
-torch==2.4.0.dev20240527+cu121
-torchaudio==2.2.0.dev20240530+cu121
-torchdata==0.7.1.dev20240530+cpu
-torchvision==0.19.0.dev20240530+cu121
+torch==2.4.0.dev20240607+cu121
+torchaudio==2.4.0.dev20240607+rocm6.1
+torchdata==0.7.1
+-e git+https://github.com/pytorch/torchtitan@1ceaa4e2adc8ef5a0864f99e126e4ab18cd7db8f#egg=torchtitan
+torchvision==0.19.0.dev20240607+cu121
 tornado==6.4
 tqdm==4.66.4
 traitlets==5.14.1
@@ -171,13 +189,13 @@ typing_extensions==4.9.0
 tzdata==2024.1
 uri-template==1.3.0
 urllib3==2.2.0
-wadllib==1.3.6
 wcwidth==0.2.13
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.7.0
 Werkzeug==3.0.3
 widgetsnbextension==4.0.9
+wrapt==1.16.0
 xxhash==3.4.1
 yarl==1.9.4
-zipp==1.0.0
+zipp==3.19.2
