VSCode debug settings with commandline args for pre-training

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,69 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "justMyCode": false
-        }
-    ]
-}
+        },
+        {
+            "name": "fsdp_finetune",
+            "type": "python",
+            "request": "launch",
+            "program": "/workspace/plm-train/plm_train/finetune.py",
+            "args": [
+              "--model_name",
+              "facebook/esm1v_t33_650M_UR90S_1",
+              "--precision",
+              "fp32",
+              "--model_type",
+              "masked",
+              "--train_type",
+              "dora",
+              "--lora_rank",
+              "8",
+              "--lora_alpha",
+              "8",
+              "--lora_dropout",
+              "0.1",
+              "--lora_target_modules",
+              "query,value",
+              "--dataset",
+              "confit",
+              "--batch_size",
+              "2",
+              "--log_to",
+              "wandb",
+              "--num_epochs",
+              "25",
+              "--lr",
+              "5e-4",
+              "--lr_scheduler",
+              "constant",
+              "--eval_interval",
+              "3",
+              "--model_save_interval",
+              "9",
+              "--gradient_accumulation_steps",
+              "1",
+              "--protein_dataset",
+              "ARGR_ECOLI_Tsuboyama_2023_1AOY",
+              "--protein_trainset_path",
+              "/workspace/ConFit/data/proteingym/ARGR_ECOLI_Tsuboyama_2023_1AOY/train_480_shot.csv",
+              "--protein_valset_path",
+              "/workspace/ConFit/data/proteingym/ARGR_ECOLI_Tsuboyama_2023_1AOY/val_624_shot.csv",
+              "--protein_testset_path",
+              "/workspace/ConFit/data/proteingym/ARGR_ECOLI_Tsuboyama_2023_1AOY/test.csv",
+              "--project_name",
+              "fsdp_qlora_confit_fewshot_finetuning",
+              "--save_model",
+              "True",
+              "--output_dir",
+              "/workspace/plm-train/model_outputs/ARGR_ECOLI_Tsuboyama_2023_1AOY/cope_test/train_480_shot",
+              // "--profile_memory",
+              // "True",
+              // "--torch_profile_memory",
+              // "True"
+            ],
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "subProcess": true
+          }
+        ]
+      }
